# sdl-examples

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTE.md  README.md  bits.c  bits.h  dda.c  display.c  doom.c  drivers.c  matrix.c  matrix.h  precision.c  precision.h  primitives.c  primitives.h  rank.h  shape.c  shape.h  simple.c  simple_vector.c  tensor.c  tensor.h  vector.c  vector.h
docs/: building.md  dda.md  displays.md  drivers.md  precision.md  primitives.md  simple.md  vector.md
examples/drivers/: display.c  environ.c  render.c
examples/lines/: dda.c  line.c
examples/matrices/: simple.c
examples/vectors/: simple.c  simple_vector.c  vertex.c
